识图功能完善

--- a/InputSimulator_SendInput/InputSimulator_SendInput.csproj
+++ b/InputSimulator_SendInput/InputSimulator_SendInput.csproj
@@ -186,6 +186,9 @@
     <Content Include="dicWordsStyle.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Scripts\识图测试.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\指令合集.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
