--- a/InputSimulator_SendInput/InputSimulator_SendInput.csproj
+++ b/InputSimulator_SendInput/InputSimulator_SendInput.csproj
@@ -186,7 +186,25 @@
     <Content Include="dicWordsStyle.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\tfd露娜自动打碟.txt">
+    <Content Include="Scripts\tfd-伊内兹qc挂机.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\tfd-弗雷娜冰封山谷哨所-中断任务.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\tfd-弗雷娜冰封山谷哨所.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\tfd-杰哥哨所刷核桃.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\tfd-杰哥哨所刷金币-中断任务.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\tfd-露娜自动打碟.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\鼠标移动测试.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Scripts\识图测试.txt">
